import all length functions into „aleksi/lengths“ + move unit-conversion function to their own file + support passing a list to a unit-conversion function

--- a/stylesheets/aleksi/_lengths.scss
+++ b/stylesheets/aleksi/_lengths.scss
@@ -6,3 +6,18 @@
 //// @author [Yoannis Jamar](http://yoannis.me)
 
 @import "aleksi/lengths/strip-unit";
+@import "aleksi/lengths/set-unit";
+@import "aleksi/lengths/find-digits";
+@import "aleksi/lengths/find-integer";
+
+@import "aleksi/lengths/convert";
+@import "aleksi/lengths/to-px";
+@import "aleksi/lengths/to-in";
+@import "aleksi/lengths/to-mm";
+@import "aleksi/lengths/to-cm";
+@import "aleksi/lengths/to-pt";
+@import "aleksi/lengths/to-pc";
+@import "aleksi/lengths/to-em";
+@import "aleksi/lengths/to-rem";
+@import "aleksi/lengths/to-ex";
+@import "aleksi/lengths/to-percent";
