--- a/stylesheets/aleksi/lengths/_convert.scss
+++ b/stylesheets/aleksi/lengths/_convert.scss
@@ -2,7 +2,7 @@
 // =ALEKSI - CONVERT-LENGTH
 // =============================================================================
 //// @group aleksi-lengths
-//// @author [Yoannis Jamar](http://yoannis.me)
+//// @author [Yoannis Jamar](https://yoannis.com)
 //// @author [Chris Eppstein](http://chriseppstein.github.io/)
 
 @import "aleksi/general/memo";
@@ -213,184 +213,4 @@ $root-font-size: $base-font-size !default;
   }
 
   @return memo-set('aleksi', $_memo_, $output-length);
-}
-
-// =to-px( $length[, $from-context, $to-context ])
-// -----------------------------------------------------------------------------
-/// Convert any CSS <length> or <percentage> value to pixels.
-///
-/// @param {number} $length - A css <length> or <percentage> value
-/// @param {number} $from-context [$base-font-size] - The absolute length (in px) to which `$length` refers
-/// @param {number} $to-context [$from-context] - the absolute length in px to which the output value will refer.
-///
-/// @return {length} - value of '$length' in pixels
-///
-/// @access public
-/// @since 0.3.1
-
-@function to-px( $length, $from-context: $base-font-size, $to-context: $from-context)
-{
-  @return convert-length($length, 'px', $from-context, $to-context);
-}
-
-// =to-em( $length[, $from-context, $to-context ])
-// -----------------------------------------------------------------------------
-/// Convert any CSS <length> or <percentage> value to ems.
-///
-/// @param {number} $length - A css <length> or <percentage> value
-/// @param {number} $from-context [$base-font-size] - The absolute length (in px) to which `$length` refers
-/// @param {number} $to-context [$from-context] - the absolute length in px to which the output value will refer.
-///
-/// @return {length} - value of '$length' in ems
-///
-/// @access public
-/// @since 0.3.1
-
-@function to-em( $length, $from-context: $base-font-size, $to-context: $from-context)
-{
-  @return convert-length($length, 'em', $from-context, $to-context);
-}
-
-// =to-rem( $length[, $from-context, $to-context ])
-// -----------------------------------------------------------------------------
-/// Convert any CSS <length> or <percentage> value to rems.
-///
-/// @param {number} $length - A css <length> or <percentage> value
-/// @param {number} $from-context [$base-font-size] - The absolute length (in px) to which `$length` refers
-/// @param {number} $to-context [$from-context] - the absolute length in px to which the output value will refer.
-///
-/// @return {length} - value of '$length' in rems
-///
-/// @access public
-/// @since 0.3.1
-
-@function to-rem( $length, $from-context: $base-font-size, $to-context: $from-context)
-{
-  @return convert-length($length, 'rem', $from-context, $to-context);
-}
-
-// =to-percent( $length[, $from-context, $to-context ])
-// -----------------------------------------------------------------------------
-/// Convert any CSS <length> or <percentage> value to percentages.
-///
-/// @param {number} $length - A css <length> or <percentage> value
-/// @param {number} $from-context [$base-font-size] - The absolute length (in px) to which `$length` refers
-/// @param {number} $to-context [$from-context] - the absolute length in px to which the output value will refer.
-///
-/// @return {length} - value of '$length' in percentages
-///
-/// @access public
-/// @since 0.3.1
-
-@function to-percent( $length, $from-context: $base-font-size, $to-context: $from-context)
-{
-  @return convert-length($length, '%', $from-context, $to-context);
-}
-
-// =to-ex( $length[, $from-context, $to-context ])
-// -----------------------------------------------------------------------------
-/// Convert any CSS <length> or <percentage> value to exs.
-///
-/// @param {number} $length - A css <length> or <percentage> value
-/// @param {number} $from-context [$base-font-size] - The absolute length (in px) to which `$length` refers
-/// @param {number} $to-context [$from-context] - the absolute length in px to which the output value will refer.
-///
-/// @return {length} - value of '$length' in exs
-///
-/// @access public
-/// @since 0.3.1
-
-@function to-ex( $length, $from-context: $base-font-size, $to-context: $from-context)
-{
-  @return convert-length($length, 'ex', $from-context, $to-context);
-}
-
-// =to-in( $length[, $from-context, $to-context ])
-// -----------------------------------------------------------------------------
-/// Convert any CSS <length> or <percentage> value to inches.
-///
-/// @param {number} $length - A css <length> or <percentage> value
-/// @param {number} $from-context [$base-font-size] - The absolute length (in px) to which `$length` refers
-/// @param {number} $to-context [$from-context] - the absolute length in px to which the output value will refer.
-///
-/// @return {length} - value of '$length' in inches
-///
-/// @access public
-/// @since 0.3.1
-
-@function to-in( $length, $from-context: $base-font-size, $to-context: $from-context)
-{
-  @return convert-length($length, 'in', $from-context, $to-context);
-}
-
-// =to-mm( $length[, $from-context, $to-context ])
-// -----------------------------------------------------------------------------
-/// Convert any CSS <length> or <percentage> value to millimeters.
-///
-/// @param {number} $length - A css <length> or <percentage> value
-/// @param {number} $from-context [$base-font-size] - The absolute length (in px) to which `$length` refers
-/// @param {number} $to-context [$from-context] - the absolute length in px to which the output value will refer.
-///
-/// @return {length} - value of '$length' in millimeters
-///
-/// @access public
-/// @since 0.3.1
-
-@function to-mm( $length, $from-context: $base-font-size, $to-context: $from-context)
-{
-  @return convert-length($length, 'mm', $from-context, $to-context);
-}
-
-// =to-cm( $length[, $from-context, $to-context ])
-// -----------------------------------------------------------------------------
-/// Convert any CSS <length> or <percentage> value to centimeters.
-///
-/// @param {number} $length - A css <length> or <percentage> value
-/// @param {number} $from-context [$base-font-size] - The absolute length (in px) to which `$length` refers
-/// @param {number} $to-context [$from-context] - the absolute length in px to which the output value will refer.
-///
-/// @return {length} - value of '$length' in centimeters
-///
-/// @access public
-/// @since 0.3.1
-
-@function to-cm( $length, $from-context: $base-font-size, $to-context: $from-context)
-{
-  @return convert-length($length, 'cm', $from-context, $to-context);
-}
-
-// =to-pt( $length[, $from-context, $to-context ])
-// -----------------------------------------------------------------------------
-/// Convert any CSS <length> or <percentage> value to points.
-///
-/// @param {number} $length - A css <length> or <percentage> value
-/// @param {number} $from-context [$base-font-size] - The absolute length (in px) to which `$length` refers
-/// @param {number} $to-context [$from-context] - the absolute length in px to which the output value will refer.
-///
-/// @return {length} - value of '$length' in points
-///
-/// @access public
-/// @since 0.3.1
-
-@function to-pt( $length, $from-context: $base-font-size, $to-context: $from-context)
-{
-  @return convert-length($length, 'pt', $from-context, $to-context);
-}
-
-// =to-pc( $length[, $from-context, $to-context ])
-// -----------------------------------------------------------------------------
-/// Convert any CSS <length> or <percentage> value to picas.
-///
-/// @param {number} $length - A css <length> or <percentage> value
-/// @param {number} $from-context [$base-font-size] - The absolute length (in px) to which `$length` refers
-/// @param {number} $to-context [$from-context] - the absolute length in px to which the output value will refer.
-///
-/// @return {length} - value of '$length' in picas
-///
-/// @access public
-/// @since 0.3.1
-
-@function to-pc( $length, $from-context: $base-font-size, $to-context: $from-context)
-{
-  @return convert-length($length, 'pc', $from-context, $to-context);
 }
