--- a/test/tests/aleksi/math/_divide.scss
+++ b/test/tests/aleksi/math/_divide.scss
@@ -8,28 +8,33 @@
 {
   @include test('should calculate the quotient of two numbers')
   {
-    @include assert-equal( divide(10, 5), 2 );
-    @include assert-equal( divide(10em, 5), 2em );
+    @include assert-equal(divide(10, 5), 2 );
+    @include assert-equal(divide(10em, 5), 2em );
   }
 
   @include test('should calculate the division of multiple numbers successively')
   {
-    @include assert-equal( divide(20, 5, 2), 2 );
-    @include assert-equal( divide(500, 10, 5, 2, 1), 5 );
+    @include assert-equal(divide(20, 5, 2), 2 );
+    @include assert-equal(divide(500, 10, 5, 2, 1), 5 );
   }
 
-  @include test('should warn if one of the arguments is not a number, and return null')
+  @include test('should warn and return null if one of the arguments is not a number nor null')
   {
-    @include assert-equal( divide(10, 'hello'), null );
-    @include assert-equal( divide(10, null), null );
-    @include assert-equal( divide(10, false), null );
-    @include assert-equal( divide(10 5, 3), null );
+    @include assert-equal(divide(10, 'hello'), null );
+    @include assert-equal(divide(10, false), null );
+    @include assert-equal(divide(10 5, 3), null );
+  }
+
+  @include test('should ignore terms that are null')
+  {
+    @include assert-equal(divide(null, 10, 5), divide(10, 5));
+    @include assert-equal(divide(10, null, 5), divide(10, 5));
   }
 
   @include test('should be aliased as div')
   {
-    @include assert-equal( divide(10, 5), div(10, 5) );
-    @include assert-equal( divide(20, 5, 2), div(20, 5, 2) );
-    @include assert-equal( divide(10, 'hello'), div(10, 'hello') );
+    @include assert-equal(divide(10, 5), div(10, 5) );
+    @include assert-equal(divide(20, 5, 2), div(20, 5, 2) );
+    @include assert-equal(divide(10, 'hello'), div(10, 'hello') );
   }
 }
