--- a/test/tests/aleksi/math/_multiply.scss
+++ b/test/tests/aleksi/math/_multiply.scss
@@ -18,12 +18,17 @@
     @include assert-equal( multiply(10, 5, 3, 2, 1), 300 );
   }
 
-  @include test('should warn if one of the arguments is not a number, and return null')
+  @include test('should warn and return null if one of the arguments is not a number nor null')
   {
     @include assert-equal( multiply(10, 'hello'), null );
-    @include assert-equal( multiply(10, null), null );
     @include assert-equal( multiply(10, false), null );
     @include assert-equal( multiply(10 5, 3), null );
+  }
+
+  @include test('should ignore terms that are null')
+  {
+    @include assert-equal(multiply(null, 10, 5), multiply(10, 5));
+    @include assert-equal(multiply(10, null, 5), multiply(10, 5));
   }
 
   @include test('should be aliased as mult')
