`get-side-value()`: implement shortcut functions `top()`, `right()`, `bottom()` and `left()` + add documentation group ‘aleksi-lengths’

--- a/stylesheets/aleksi/_sides.scss
+++ b/stylesheets/aleksi/_sides.scss
@@ -8,4 +8,9 @@
 @import "sides/to-sides-list";
 @import "sides/reduce-sides";
 @import "sides/output-sides";
+
 @import "sides/side-value";
+@import "sides/top";
+@import "sides/right";
+@import "sides/bottom";
+@import "sides/left";
