--- a/stylesheets/aleksi/sides/_expand-sides.scss
+++ b/stylesheets/aleksi/sides/_expand-sides.scss
@@ -1,6 +1,8 @@
 // =============================================================================
 // =ALEKSI - EXPAND-SIDES-LIST
 // =============================================================================
+//// @group aleksi-sides
+//// @author [Yoannis Jamar](https://yoannis.com)
 
 @import "aleksi/sides/to-sides-list";
 @import "aleksi/sides/to-sides-map";
