--- a/stylesheets/aleksi/sides/_reduce-sides.scss
+++ b/stylesheets/aleksi/sides/_reduce-sides.scss
@@ -1,6 +1,8 @@
 // =============================================================================
 // =ALEKSI - REDUCE-SIDES-LIST
 // =============================================================================
+//// @group aleksi-sides
+//// @author [Yoannis Jamar](https://yoannis.com)
 
 @import "aleksi/general/throw";
 @import "aleksi/lists/get-nth";
