--- a/stylesheets/aleksi/sides/_side-name.scss
+++ b/stylesheets/aleksi/sides/_side-name.scss
@@ -1,6 +1,8 @@
 // =============================================================================
 // =ALEKSI - SIDE-NAME
 // =============================================================================
+//// @group aleksi-sides
+//// @author [Yoannis Jamar](https://yoannis.com)
 
 @import "aleksi/general/throw";
 @import "aleksi/general/const";
