--- a/stylesheets/aleksi/sides/_side-value.scss
+++ b/stylesheets/aleksi/sides/_side-value.scss
@@ -1,6 +1,8 @@
 // =============================================================================
-// =ALEKSI - SIDES-LIST
+// =ALEKSI - SIDE-VALUE
 // =============================================================================
+//// @group aleksi-sides
+//// @author [Yoannis Jamar](https://yoannis.com)
 
 @import "aleksi/general/const";
 @import "aleksi/const/css/layout-sides";
