--- a/stylesheets/aleksi/sides/_to-sides-list.scss
+++ b/stylesheets/aleksi/sides/_to-sides-list.scss
@@ -1,6 +1,8 @@
 // =============================================================================
 // =ALEKSI - TO-SIDES-LIST
 // =============================================================================
+//// @group aleksi-sides
+//// @author [Yoannis Jamar](https://yoannis.com)
 
 @import "aleksi/general/const";
 @import "aleksi/general/throw";
