--- a/stylesheets/aleksi/sides/_to-sides-map.scss
+++ b/stylesheets/aleksi/sides/_to-sides-map.scss
@@ -1,6 +1,8 @@
 // =============================================================================
 // =ALEKSI - TO-SIDES-MAP
 // =============================================================================
+//// @group aleksi-sides
+//// @author [Yoannis Jamar](https://yoannis.com)
 
 @import "aleksi/general/const";
 @import "aleksi/const/css/layout-sides";
