--- a/stylesheets/aleksi/arglists/_arglist-prepend.scss
+++ b/stylesheets/aleksi/arglists/_arglist-prepend.scss
@@ -5,18 +5,14 @@
 //// @group aleksi-arglists
 //// @author [Yoannis Jamar](http://yoannis.com)
 
+@import "aleksi/general/throw";
+@import "aleksi/lists/prepend";
+
 // =arglist-prepend( $arglist, $value[, $separator ])
 // -----------------------------------------------------------------------------
 
 @function arglist-prepend($arglist, $value, $separator: list-separator($arglist))
 {
-  // add value at the beginning
-  $args: append((), $value, $separator);
-
-  // build a list manually
-  @each $arg in $arglist {
-    $args: append($args, $arg, $separator);
-  }
-
-  @return $args;
+  $_: throw-warning('Deprecated `arglist-prepend()` function, use aleksi\'s `prepend()` function instead');
+  @return prepend($arglist, $value, $separator);
 }
