move number tests and number functions to ‘aleksi/numbers’ group

--- a/stylesheets/_aleksi.scss
+++ b/stylesheets/_aleksi.scss
@@ -8,9 +8,9 @@
 
 @import "aleksi/const";
 @import "aleksi/general";
-@import "aleksi/test";
 @import "aleksi/cast";
 @import "aleksi/math";
+@import "aleksi/numbers";
 @import "aleksi/lengths";
 @import "aleksi/strings";
 @import "aleksi/colors";
