--- a/stylesheets/aleksi/numbers/_set-unit.scss
+++ b/stylesheets/aleksi/numbers/_set-unit.scss
@@ -1,12 +1,12 @@
 /// =============================================================================
 // =ALEKSI - SET-UNIT
 // =============================================================================
-//// @group aleksi-lengths
+//// @group aleksi-numbers
 //// @author [Yoannis Jamar](http://yoannis.me)
 //// @author [Hugo Giraudel]((http://hugogiraudel.com)
 
-@import "aleksi/general/const";
 @import "aleksi/general/throw";
+@import "aleksi/general/const";
 @import "aleksi/const/css/units";
 @import "aleksi/const/css/unit-values";
 
