--- a/stylesheets/aleksi/numbers/_strip-unit.scss
+++ b/stylesheets/aleksi/numbers/_strip-unit.scss
@@ -1,7 +1,7 @@
 // =============================================================================
 // =ALEKSI - STRIP-UNIT
 // =============================================================================
-//// @group aleksi-units
+//// @group aleksi-numbers
 //// @author [Yoannis Jamar](http://yoannis.me)
 //// @author [Hugo Giraudel]((http://hugogiraudel.com)
 
