--- a/stylesheets/aleksi/numbers/_find-integer.scss
+++ b/stylesheets/aleksi/numbers/_find-integer.scss
@@ -1,27 +1,27 @@
 // =============================================================================
 // =ALEKSI - FIND-DIGITS
 // =============================================================================
-//// @group aleksi-lengths
+//// @group aleksi-numbers
 //// @author [Yoannis Jamar](http://yoannis.me)
 //// @author [Hugo Giraudel]((http://hugogiraudel.com)
 
 @import "aleksi/general/const";
 @import "aleksi/const/decimal-space";
-@import "aleksi/lengths/strip-unit";
+@import "aleksi/numbers/strip-unit";
 
-// =find-digits( $source )
+// =find-integer( $source )
 // -----------------------------------------------------------------------------
-/// Finding the digits part of a stringified number
+/// Finding the integer part of a stringified number
 /// @access private
 ///
-/// @param {string} $source - string source
+/// @param {String} $source  - string source
 /// @param {Number} $pointer - current pointer
 ///
-/// @return {List} - new pointer, parsed number
+/// @return {List} new pointer, parsed number
 ///
 /// @author [Hugo Giraudel]((http://hugogiraudel.com)
 
-@function find-digits($source, $pointer)
+@function find-integer($source, $pointer)
 {
   // don't waste our time with numbers
   @if type-of($source) == 'number' {
@@ -32,23 +32,21 @@
   $length: str-length($source);
   $numbers: const('DECIMAL_SPACE');
   $result: 0;
-  $runs: 1;
 
   @while ($pointer <= $length) {
     $token: str-slice($source, $pointer, $pointer);
     $index: index($numbers, $token);
 
-    @if ($token == '.') {
+    @if ($token == '-') {
       // @continue;
-    } @else if ($index and $index > 0) {
-      $runs: ($runs * 10);
+    } @else if $index {
       $result: ($result * 10) + ($index - 1);
     } @else {
-      @return $pointer, ($result / $runs);
+      @return $pointer, $result;
     }
 
     $pointer: ($pointer + 1);
   }
 
-  @return $pointer, ($result / $runs);
+  @return $pointer, $result;
 }
