`to-rem()`: add basic unit tests

--- a/test/tests/_aleksi.scss
+++ b/test/tests/_aleksi.scss
@@ -30,6 +30,9 @@
 @import "tests/aleksi/strings/str-explode";
 @import "tests/aleksi/strings/str-trim";
 
+// LENGHTS
+@import "tests/aleksi/lengths/to-rem";
+
 // LISTS
 @import "tests/aleksi/lists/is-list";
 @import "tests/aleksi/lists/set-list-separator";
